feat: add payments with ticket holds
